objects/Campaign.object
<CustomObject>
    <fields>
        <fullName>ADM_Campaign_ID__c</fullName>
        <caseSensitive>true</caseSensitive>
        <description>This field Consist of ADM Org Campaign ID.</description>
        <externalId>true</externalId>
        <label>ADM Campaign ID</label>
        <length>200</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Actual_Co_Marketing_Funds__c</fullName>
        <description>Used to track the funds spent or received for co-marketing with a partner</description>
        <inlineHelpText>Actual amount spent on or received from a partner towards Co-Marketing with Partners. A negative number indicates funds received from a partner.</inlineHelpText>
        <label>Actual Co-Marketing Funds</label>
        <precision>15</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Actual_Event_Fees__c</fullName>
        <inlineHelpText>Includes Public Relations, Consulting, Market Research, Membership Dues</inlineHelpText>
        <label>Actual Outside Services</label>
        <precision>15</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Actual_Expense_Notes__c</fullName>
        <label>Actual Expense Notes</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Actual_Other_Misc__c</fullName>
        <inlineHelpText>Enter actual spending on any miscellaneous items related to this Campaign</inlineHelpText>
        <label>Actual Other / Misc</label>
        <precision>15</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Actual_Supplies__c</fullName>
        <inlineHelpText>Includes Product Collateral, Catalogs, Board Displays, Print Distribution</inlineHelpText>
        <label>Actual Literature</label>
        <precision>15</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Actual_Travel_Entertainment__c</fullName>
        <inlineHelpText>Includes Tradeshows, TechDays, Advertising, Product Launches</inlineHelpText>
        <label>Actual Promotion</label>
        <precision>15</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Actuals_are_Final__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Check this box if the ACTUAL expenses associated to this campaign have been updated to reflect the FINAL expense.</inlineHelpText>
        <label>Actuals are Final</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Budget_Status_Notes__c</fullName>
        <label>Budget Status Notes</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Budget_Status__c</fullName>
        <description>Reflects the status of budget approval process</description>
        <inlineHelpText>Specify the status of budget approval process</inlineHelpText>
        <label>Budget Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Planned</fullName>
                </value>
                <value>
                    <fullName>Approved</fullName>
                </value>
                <value>
                    <fullName>Disapproved</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Budget_Varience_Value__c</fullName>
        <formula>ActualCost - BudgetedCost</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>This is a calculated field of the Under/(Over) budget calculation</inlineHelpText>
        <label>$ Budget Variance</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Budget_Varience__c</fullName>
        <description>%age variance between budgeted and actual campaign cost.
Formula is (Actual Cost - Budgeted Cost) / Budgeted Cost * 100</description>
        <formula>if ( BudgetedCost &gt;0, ( ActualCost - BudgetedCost ) / BudgetedCost ,0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Variance between budgeted and actual campaign cost</inlineHelpText>
        <label>% Budget Variance</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Budgeted_Co_Marketing_Funds__c</fullName>
        <label>Budgeted Co-Marketing Funds</label>
        <summarizedField>Campaign_Partners__c.Amount_Budget_Impact__c</summarizedField>
        <summaryForeignKey>Campaign_Partners__c.Campaign__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Business_Unit_Code__c</fullName>
        <description>Used in the campaign tracking query string formula.  Updated by workflow.</description>
        <label>Business Unit Code</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Business_Unit__c</fullName>
        <description>Business Unit provided by Eloqua when creating a campaign</description>
        <label>Business Unit</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Aerospace, Defense &amp; Marine</fullName>
                </value>
                <value>
                    <fullName>Appliance</fullName>
                </value>
                <value>
                    <fullName>Application Tooling</fullName>
                </value>
                <value>
                    <fullName>Corporate</fullName>
                </value>
                <value>
                    <fullName>Data and Devices</fullName>
                </value>
                <value>
                    <fullName>Industrial &amp; Commercial Transportations</fullName>
                </value>
                <value>
                    <fullName>Industrial-Automation &amp; Control</fullName>
                </value>
                <value>
                    <fullName>Industrial-Intelligent Buildings</fullName>
                </value>
                <value>
                    <fullName>Industrial-Lighting</fullName>
                </value>
                <value>
                    <fullName>Industrial-MEFA</fullName>
                </value>
                <value>
                    <fullName>Industrial-Railway</fullName>
                </value>
                <value>
                    <fullName>Medical</fullName>
                </value>
                <value>
                    <fullName>Sensors</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CAMPAIGNCAL__Exclude_from_Calendar__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Exclude from Month View</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CAMPAIGNCAL__Exclude_from_Plan_View__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Exclude from Plan View</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Campaign_Code_Clean__c</fullName>
        <formula>LOWER( SUBSTITUTE(Campaign_Code__c, &quot; &quot;, &quot;_&quot;))</formula>
        <label>Campaign Code Clean</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Campaign_Code__c</fullName>
        <description>Provided by the Eloqua user that is creating the campaign.  Should not contain any spaces or special characters.</description>
        <inlineHelpText>Provided by the Eloqua user that is creating the campaign.  Should not contain any spaces or special characters.</inlineHelpText>
        <label>Campaign Code</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Campaign_Members_Report_Link__c</fullName>
        <formula>HYPERLINK(&quot;/00OL0000000SRLk?pv0=&quot;  &amp;  Name , &quot;Report Link&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Campaign Members Report Link</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Campaign_Members_Report_Link_txt_c__c</fullName>
        <formula>&quot;/00OL0000000SRLk?pv0=&quot; &amp; Name</formula>
        <label>Campaign Members Report Link</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Campaign_Type_Code__c</fullName>
        <description>Three character media type code.  Used in Legacy Tracking Code formula.</description>
        <formula>CASE(Type, 
&quot;Catalog / Brochure&quot; , &quot;cat&quot;, 
&quot;Direct Mail&quot;, &quot;dir&quot;, 
&quot;Display&quot; , &quot;disp&quot;, 
&quot;Email&quot; , &quot;email&quot;, 
&quot;Press Release&quot;, &quot;pr&quot;, 
&quot;Search&quot; , &quot;srch&quot;, 
&quot;Social&quot; , &quot;social&quot;, 
&quot;Training / Seminar&quot;, &quot;trn&quot;, 
&quot;Trade Shows&quot; , &quot;show&quot;, 
&quot;Vanity URL&quot;, &quot;van&quot;, 
&quot;Video&quot; , &quot;vid&quot;, 
&quot;Webinar&quot;, &quot;web&quot;, 
&quot;other&quot;)</formula>
        <label>Campaign Type Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Campaign_Type__c</fullName>
        <label>Campaign Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Industries</fullName>
                </value>
                <value>
                    <fullName>Appliance</fullName>
                </value>
                <value>
                    <fullName>Medical</fullName>
                </value>
                <value>
                    <fullName>TTI</fullName>
                </value>
                <value>
                    <fullName>Consumer Device</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Contact_Response__c</fullName>
        <label>Contact Response</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Created_by_custom__c</fullName>
        <description>Preserving Created by for ADM</description>
        <label>Created by custom</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Created_date_custom__c</fullName>
        <description>Preserving Created date for the ADM</description>
        <label>Created date custom</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Creative_Code__c</fullName>
        <description>Provided by Eloqua user creating the campaign.  Should not contain any spaces or special characters.</description>
        <label>Creative Code</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DB_Campaign_Tactic__c</fullName>
        <description>This is a field that is installed by and used with the Adoption Dashboard AppExchange package. If your org already has a similar field, you can change the reports that are part of the Adoption Dashboard package to use your custom field and then delete this field.</description>
        <label>DB Campaign Tactic</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Type</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Print Advertisement</fullName>
                </value>
                <value>
                    <fullName>Email</fullName>
                </value>
                <value>
                    <fullName>Employment Seminars</fullName>
                </value>
                <value>
                    <fullName>Webinars</fullName>
                </value>
                <value>
                    <fullName>Public Relations</fullName>
                </value>
                <value>
                    <fullName>Partners</fullName>
                </value>
                <value>
                    <fullName>Referral Program</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Lunches</fullName>
                </value>
                <value>
                    <fullName>Direct Mail</fullName>
                </value>
                <value>
                    <fullName>Sales Call Down</fullName>
                </value>
                <value>
                    <fullName>Online Banners/Ads</fullName>
                </value>
                <value>
                    <fullName>Internal Website</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Destination_URL__c</fullName>
        <label>Destination URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Detailed_Budget_Planning__c</fullName>
        <defaultValue>false</defaultValue>
        <description>heck when detailed budget planning need to be entered for each of the category. 

When checked, the amount fields in the Campaign Budget Details section will be stored as 0 while saving the record. These will be computed using the line items on the Campaign Budget Details page.</description>
        <inlineHelpText>Use the detailed budget planning when you want to track multiple line items for each expense category or if you want to tie expense items to accounting/tracking codes. Once checked, all budget items can only be edited via the “budget details” custom link.</inlineHelpText>
        <label>Detailed Budget Planning</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Eloqua_Campaign_ID__c</fullName>
        <description>Eloqua-generated ID of the campaign</description>
        <label>Eloqua Campaign ID</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Eloqua_Upload_ID__c</fullName>
        <label>Eloqua Upload ID</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Energy_Record_Id__c</fullName>
        <description>Energy Record Id</description>
        <externalId>true</externalId>
        <label>Energy Record Id</label>
        <length>20</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Event_End_Date__c</fullName>
        <inlineHelpText>Enter the planned end date for the event. This may be different from the Campaign end date. Event End Date must be before or equal to the Campaign End Date.</inlineHelpText>
        <label>Event End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Event_Fees__c</fullName>
        <inlineHelpText>Includes Public Relations, Consulting, Market Research, Membership Dues</inlineHelpText>
        <label>Budgeted Outside Services</label>
        <precision>15</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Event_Start_Date__c</fullName>
        <description>This field is used to capture planned start date for the event. A Campaign may be started much earlier than the event.</description>
        <inlineHelpText>Enter the planned start date for the event. This may be different from the Campaign start date. Event Start Date must be equal or after the Campaign Start Date.</inlineHelpText>
        <label>Event Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>First_Follow_Up_Date__c</fullName>
        <label>First Follow Up Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>First_Follow_Up_Owner__c</fullName>
        <label>First Follow Up - Owner</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>First_Reminder_Contact_Owner_Date__c</fullName>
        <formula>StartDate + First_Reminder_Contact_Owner__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>First Reminder Contact Owner Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>First_Reminder_Contact_Owner__c</fullName>
        <label>First Reminder Contact Owner</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>First_Reminder_Customer_Date__c</fullName>
        <formula>StartDate +  First_Reminder_Customer__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>First Reminder Customer Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>First_Reminder_Customer__c</fullName>
        <description>Number of Days started from Campaign Start Date + x days for 1st Reminder</description>
        <label>First Reminder Customer</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Full_URL__c</fullName>
        <description>Destination URL + Tracking Query String with Eloqua ID</description>
        <formula>Destination_URL__c + &apos;?&apos; +  Tracking_Query_String_With_Eloqua_ID__c</formula>
        <inlineHelpText>Destination URL + Tracking Query String with Eloqua ID</inlineHelpText>
        <label>Full URL</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Invited_Contacts__c</fullName>
        <label># Invited Contacts</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Legacy_Tracking_Code__c</fullName>
        <description>Legacy Tracking Code that was used in campaigns in Central Org</description>
        <formula>CASE( Business_Unit__c , &quot;Industrial-MEFA&quot; , &quot;cis_indus&quot; , &quot;Industrial-Lighting&quot; , &quot;cis_indus&quot; , &quot;Industrial-Commercial Buildings&quot; , &quot;cis_indus&quot; , &quot;Industrial-Railway&quot; , &quot;cis_indus&quot; , &quot;Industrial-Solar&quot; , &quot;cis_indus&quot; , &quot;&quot;) 
+ &quot;_site_lp_&quot; 
+ Campaign_Type_Code__c
+ &quot;_&quot; 
+ Campaign_Code__c + IF (Creative_Code__c != &quot;&quot;, &quot;_&quot; + Creative_Code__c, &quot;&quot;) 
+ &quot;_&quot; +  CASESAFEID(Id)</formula>
        <inlineHelpText>Legacy Tracking Code that was used in campaigns in Central Org</inlineHelpText>
        <label>Legacy Tracking Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MobileVizArt__Version__c</fullName>
        <label>Version</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Notification_Sent__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Notification Sent</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Other_Misc__c</fullName>
        <inlineHelpText>Enter budget for any miscellaneous spends related to this Campaign</inlineHelpText>
        <label>Budgeted Other / Misc</label>
        <precision>15</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Parent_Campiagn_ID__c</fullName>
        <formula>ParentId</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Parent Campiagn ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Partner__c</fullName>
        <description>Provided by Eloqua user when creating a campaign.</description>
        <label>Partner</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>TE.com - internal</fullName>
                </value>
                <value>
                    <fullName>Google</fullName>
                </value>
                <value>
                    <fullName>Bing</fullName>
                </value>
                <value>
                    <fullName>Baidu</fullName>
                </value>
                <value>
                    <fullName>Facebook</fullName>
                </value>
                <value>
                    <fullName>LinkedIn</fullName>
                </value>
                <value>
                    <fullName>Twitter</fullName>
                </value>
                <value>
                    <fullName>amz</fullName>
                </value>
                <value>
                    <fullName>amn</fullName>
                </value>
                <value>
                    <fullName>bin</fullName>
                </value>
                <value>
                    <fullName>bai</fullName>
                </value>
                <value>
                    <fullName>brl</fullName>
                </value>
                <value>
                    <fullName>chf</fullName>
                </value>
                <value>
                    <fullName>dsn</fullName>
                </value>
                <value>
                    <fullName>ecn</fullName>
                </value>
                <value>
                    <fullName>edn</fullName>
                </value>
                <value>
                    <fullName>eet</fullName>
                </value>
                <value>
                    <fullName>eew</fullName>
                </value>
                <value>
                    <fullName>elc</fullName>
                </value>
                <value>
                    <fullName>eld</fullName>
                </value>
                <value>
                    <fullName>elq</fullName>
                </value>
                <value>
                    <fullName>elp</fullName>
                </value>
                <value>
                    <fullName>fcb</fullName>
                </value>
                <value>
                    <fullName>gdn</fullName>
                </value>
                <value>
                    <fullName>ggl</fullName>
                </value>
                <value>
                    <fullName>gsp</fullName>
                </value>
                <value>
                    <fullName>ggp</fullName>
                </value>
                <value>
                    <fullName>hao</fullName>
                </value>
                <value>
                    <fullName>iee</fullName>
                </value>
                <value>
                    <fullName>mmr</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Qualtrics_Project__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Qualtrics Project</label>
        <referenceTo>Qualtrics_Project__c</referenceTo>
        <relationshipLabel>Campaigns</relationshipLabel>
        <relationshipName>Campaigns</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Qualtrics_Schedule_Date__c</fullName>
        <label>Qualtrics Schedule Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Qualtrics_Schedule_Reminder1__c</fullName>
        <label>Qualtrics Schedule Reminder1</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Qualtrics_Schedule_Reminder2__c</fullName>
        <label>Qualtrics Schedule Reminder2</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Region_Code__c</fullName>
        <description>Code for region</description>
        <label>Region Code</label>
        <length>6</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Region__c</fullName>
        <label>Region</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Americas</fullName>
                </value>
                <value>
                    <fullName>APAC</fullName>
                </value>
                <value>
                    <fullName>China</fullName>
                </value>
                <value>
                    <fullName>EMEA</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Second_Follow_Up_Date__c</fullName>
        <label>Second Follow Up Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Second_Follow_Up_Owner__c</fullName>
        <label>Second Follow Up - Owner</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Second_Reminder_Contact_Owner_Date__c</fullName>
        <formula>StartDate + Second_Reminder_Contact_Owner__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Second Reminder Contact Owner Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Second_Reminder_Contact_Owner__c</fullName>
        <label>Second Reminder Contact Owner</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Second_Reminder_Customer_Date__c</fullName>
        <formula>StartDate + Second_Reminder_Customer__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Second Reminder Customer Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Second_Reminder_Customer__c</fullName>
        <description>Number of Days started from Campaign Start Date + x days for 2nd Reminder</description>
        <label>Second Reminder Customer</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Supplies__c</fullName>
        <inlineHelpText>Includes Product Collateral, Catalogs, Board Displays, Print Distribution</inlineHelpText>
        <label>Budgeted Literature</label>
        <precision>15</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Survey_Date__c</fullName>
        <description>the date of the survey, e.g the 15 of the month to represent a month in reports and dashboard. Used for NPS</description>
        <label>Survey Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Survey__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Survey</label>
        <referenceTo>Survey__c</referenceTo>
        <relationshipLabel>Campaigns</relationshipLabel>
        <relationshipName>Campaigns</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>TEMarketing__Include_In_Opportunity_ROI__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Include In Opportunity ROI</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>TEMarketing__MQL_Weight__c</fullName>
        <label>Weighted MQLs</label>
        <summarizedField>CampaignMember.TEMarketing__MQL_Weight__c</summarizedField>
        <summaryForeignKey>CampaignMember.CampaignId</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>TEMarketing__TE_No_Total_Opportunities__c</fullName>
        <label>Num Total Open Opps</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TEMarketing__TE_No_Won_Opportunities__c</fullName>
        <label>Total Num Closed Opps</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TEMarketing__TE_Num_Influenced_Booked_Opps__c</fullName>
        <label>Num Influenced Closed Opps</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TEMarketing__TE_Num_Influenced_Open_Opps__c</fullName>
        <label>Num Influenced Open Opps</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TEMarketing__TE_Num_Sourced_Booked_Opps__c</fullName>
        <label>Num Sourced Closed Opps</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TEMarketing__TE_Num_Sourced_Open_Opps__c</fullName>
        <label>Num Sourced Open Opps</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TEMarketing__TE_Num_Total_MQLs__c</fullName>
        <label>Num Total MQLs</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TEMarketing__TE_Related_MQLs__c</fullName>
        <label>Related MQLs</label>
        <summaryFilterItems>
            <field>CampaignMember.TEMarketing__MQL_Weight__c</field>
            <operation>greaterThan</operation>
            <value>0</value>
        </summaryFilterItems>
        <summaryForeignKey>CampaignMember.CampaignId</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>TEMarketing__TE_Total_Value_Bookings__c</fullName>
        <label>Value Forecasted Revenue</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>TEMarketing__TE_Total_Value_Opportunities__c</fullName>
        <label>Value Pipeline</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>TEMarketing__TE_Total_Value_Sourced_Bookings__c</fullName>
        <label>Value Sourced Forecasted Revenue</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>TEMarketing__TE_Total_Value_Sourced_Pipeline__c</fullName>
        <label>Value Sourced Pipeline</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>TEMarketing__TE_Value_Influenced_Bookings__c</fullName>
        <label>Value Influenced Forecasted Revenue</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>TEMarketing__TE_Value_Influenced_Pipeline__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Value Influenced Pipeline</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Tracking_Query_String_With_Eloqua_ID__c</fullName>
        <formula>Tracking_Query_String__c + 
&apos;&amp;elqCampaignId=&apos; +  Eloqua_Campaign_ID__c</formula>
        <label>Tracking Query String With Eloqua ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Tracking_Query_String__c</fullName>
        <description>Query string used for site catalyst campaign tracking</description>
        <formula>&apos;te_bu=&apos; +  Business_Unit_Code__c  +
&apos;&amp;te_type=&apos; +  Campaign_Type_Code__c  +
&apos;&amp;te_campaign=&apos; +  TEXT(Partner__c) + &apos;_&apos; +  Region_Code__c + &apos;_&apos; +  Campaign_Code_Clean__c</formula>
        <inlineHelpText>Query string used for site catalyst campaign tracking</inlineHelpText>
        <label>Tracking Query String</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Travel_Entertainment__c</fullName>
        <inlineHelpText>Includes Tradeshows, TechDays, Advertising, Product Launches</inlineHelpText>
        <label>Budgeted Promotion</label>
        <precision>15</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <listViews>
        <fullName>AD_M_Campaigns</fullName>
        <columns>PARENT_NAME</columns>
        <columns>CAMPAIGN.NAME</columns>
        <columns>CAMPAIGN.START_DATE</columns>
        <columns>CAMPAIGN.END_DATE</columns>
        <columns>CAMPAIGN.BUDGETED_COST</columns>
        <columns>CAMPAIGN.ACTUAL_COST</columns>
        <columns>CAMPAIGN.CAMPAIGN_TYPE</columns>
        <columns>CAMPAIGN.STATUS</columns>
        <columns>CAMPAIGN.NUM_LEADS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Business_Unit__c</field>
            <operation>equals</operation>
            <value>&quot;Aerospace, Defense &amp; Marine&quot;</value>
        </filters>
        <label>AD&amp;M Campaigns</label>
        <language>en_US</language>
        <sharedTo>
            <group>AD_M_Marketing</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>AllActiveCampaigns</fullName>
        <columns>CAMPAIGN.NAME</columns>
        <columns>CAMPAIGN.START_DATE</columns>
        <columns>CAMPAIGN.END_DATE</columns>
        <columns>Survey_Date__c</columns>
        <columns>CAMPAIGN.CAMPAIGN_TYPE</columns>
        <columns>CAMPAIGN.STATUS</columns>
        <columns>Legacy_Tracking_Code__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CAMPAIGN.ACTIVE</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>CAMPAIGN.NAME</field>
            <operation>contains</operation>
            <value>MED</value>
        </filters>
        <label>All Active Campaigns</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>AllActiveEloquaCampaigns</fullName>
        <columns>CAMPAIGN.NAME</columns>
        <columns>CAMPAIGN.START_DATE</columns>
        <columns>CAMPAIGN.END_DATE</columns>
        <columns>Survey_Date__c</columns>
        <columns>CAMPAIGN.CAMPAIGN_TYPE</columns>
        <columns>CAMPAIGN.STATUS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CAMPAIGN.ACTIVE</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>CAMPAIGN.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Campaign.Eloqua</value>
        </filters>
        <label>All Active Elloqua Campaigns</label>
        <language>en_US</language>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
</CustomObject>